--- a/.gitconfig
+++ b/.gitconfig
@@ -26,6 +26,7 @@
 	directory = /home/alan08
 	directory = /home/alan08/powerlevel10k
 	directory = /home/alan08/Desktop
+	directory = /home/donkey/Drives/github/escuela/agenda-icom
 [user]
         name = Alan
         email = 113253976+MrDonkey08@users.noreply.github.com
