Root ignore Left

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,13 @@
 
 .cache/
 .cargo/
+.fzf/
 .gnupg/
+.keras/
 .local/
+.MATLABConnector/
+.MathWorks/
+.matlab/
 .mozilla/
 .npm/
 .nvm/
@@ -15,6 +20,9 @@
 .ssh/
 .steam/
 .vscode-oss/
+.java/
+packettracer/
+wine/
 
 Applications/
 dev/
@@ -29,14 +37,13 @@ Public/
 Templates/
 Videos/
 
--L
-
 .bash_logout
 .dmrc
 .histfile
 .ICEauthority
 .lesshst
 .nvidia-settings-rc
+.packettracer
 .profile
 .pulse-cookie
 .steampath
@@ -46,17 +53,6 @@ Videos/
 .Xauthority
 .xsession-errors
 .zcompdump
-
-.MATLABConnector/
-.MathWorks/
-.editorconfig
-.fzf/
-.java/
-.keras/
-.matlab/
-.packettracer
-packettracer/
-wine/
 
 nohup.out
 
@@ -141,3 +137,23 @@ thunar.xml
 taskmanager.xml
 xfce4-panel.xml
 xfce4-taskmanager.xml
+
+# Created by https://www.toptal.com/developers/gitignore/api/linux
+# Edit at https://www.toptal.com/developers/gitignore?templates=linux
+
+### Linux ###
+*~
+
+# temporary files which can be created if a process still has a handle open of a deleted file
+.fuse_hidden*
+
+# KDE directory preferences
+.directory
+
+# Linux trash folder which might appear on any partition or disk
+.Trash-*
+
+# .nfs files are created when an open file is removed but is still being accessed
+.nfs*
+
+# End of https://www.toptal.com/developers/gitignore/api/linux
