--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,7 +2,7 @@ enable_audio_bell no
 
 include color.ini
 
-font_family      HackNerdFonts
+font_family HackNerdFont
 font_size 12
 
 disable_ligatures never
