--- a/.config/formatters/.editorconfig
+++ b/.config/formatters/.editorconfig
@@ -8,16 +8,16 @@ trim_trailing_whitespace = true
 
 # Matches multiple files with brace expansion notation
 # Set default charset
-[*.{js, py}]
+[*.{js,py}]
 charset = utf-8
 
 # 4 space indentation
-[*.{css, py, sass, rs}]
+[*.{css,py,sass,rs}]
 indent_style = space
 indent_size = 4
 
 # 2 space indentation
-[*.{htm, html, json, lua, md, ruby, sql, toml, yaml, yml, xml}]
+[*.{htm,html,json,lua,md,ruby,sql,toml,yaml,yml,xml}]
 indent_style = space
 indent_size = 2
 
@@ -26,5 +26,11 @@ indent_size = 2
 indent_style = tab
 
 # Tab indentation
-[*.{bib, bat, bash, c, cpp, cs go, java, js, php, sh, sql, tex, ts, zsh}]
+[*.{bib,bash,c,cpp,cs,go,java,js,php,sh,sql,tex,ts,zsh}]
 indent_style = tab
+
+# Windows files
+[*.{bat,cmd,ps,ps1}]
+indent_style = tab
+# Windows-Style newlines
+end_of_line = crlf
