Git Safe Update

--- a/.config/git/config
+++ b/.config/git/config
@@ -1,4 +1,5 @@
 [safe]
+	directory = /home/donkey/Drives/github/blog
 	# Cache
 	directory = /home/donkey/.cache/yay/ttf-ms-fonts
 	directory = /home/donkey/.cache/yay/brave-bin
@@ -28,9 +29,23 @@
 	directory = /home/donkey/.cache/paru/clone/trimage
 	directory = /home/donkey/.cache/yay/ttf-font-awesome-4
 	directory = /home/donkey/.cache/yay/neovim-symlinks
+	# Repos
+	directory = /home/donkey/Desktop/repos/alacritty
+	directory = /home/donkey/Desktop/repos/auto-cpufreq
+	directory = /home/donkey/Desktop/repos/auto-cpufreq/TEXT/auto-cpufreq
+	directory = /home/donkey/Desktop/repos/librewolf
+	directory = /home/donkey/Desktop/repos/lstlangs
+	directory = /home/donkey/Desktop/repos/paru
+	directory = /home/donkey/Desktop/repos/stremio-shell
+	directory = /home/donkey/Desktop/repos/yay
 	# School
 	directory = /home/alan08
 	directory = /home/donkey
+	directory = /home/donkey/Drives/github/cursos
+	directory = /home/donkey/Drives/github/escuela
+	directory = /home/donkey/Drives/github/escuela/6to/ingenieria-de-software/proyecto
+	directory = /home/donkey/Drives/github/old-blog
+	directory = /home/donkey/scripts/optimization/Windows-Debloater
 	directory = /home/donkey/Drives/github/escuela
 	directory = /home/donkey/Drives/github/escuela/agenda-icom
 	directory = /home/donkey/Drives/github/escuela/1ro
@@ -68,105 +83,86 @@
 	# CV
 	directory = /home/donkey/Documents/latex/FortySecondsCV
 	directory = /home/donkey/Documents/latex/FortySecondsCV/pics/flags
-	# Nvim
-	directory = /home/donkey/.local/share/nvim/lazy/bufferline.nvim
-	directory = /home/donkey/.local/share/nvim/lazy/catppuccin
-	directory = /home/donkey/.local/share/nvim/lazy/conform.nvim
-	directory = /home/donkey/.local/share/nvim/lazy/cmp-buffer
-	directory = /home/donkey/.local/share/nvim/lazy/cmp-nvim-lsp
-	directory = /home/donkey/.local/share/nvim/lazy/cmp-path
-	directory = /home/donkey/.local/share/nvim/lazy/cmp_luasnip
-	directory = /home/donkey/.local/share/nvim/lazy/confort.nvim
-	directory = /home/donkey/.local/share/nvim/lazy/dashboard-nvim
-	directory = /home/donkey/.local/share/nvim/lazy/dressing.nvim
-	directory = /home/donkey/.local/share/nvim/lazy/flash.nvim
-	directory = /home/donkey/.local/share/nvim/lazy/friendly-snippets
-	directory = /home/donkey/.local/share/nvim/lazy/gitsigns.nvim
-	directory = /home/donkey/.local/share/nvim/lazy/indent-blankline.nvim
-	directory = /home/donkey/.local/share/nvim/lazy/lazy.nvim
-	directory = /home/donkey/.local/share/nvim/lazy/LazyVim
-	directory = /home/donkey/.local/share/nvim/lazy/lualine.nvim
-	directory = /home/donkey/.local/share/nvim/lazy/LuaSnip
-	directory = /home/donkey/.local/share/nvim/lazy/mason.nvim
-	directory = /home/donkey/.local/share/nvim/lazy/mason-lspconfig.nvim
-	directory = /home/donkey/.local/share/nvim/lazy/mini.ai
-	directory = /home/donkey/.local/share/nvim/lazy/mini.bufremove
-	directory = /home/donkey/.local/share/nvim/lazy/mini.comment
-	directory = /home/donkey/.local/share/nvim/lazy/mini.indentscope
-	directory = /home/donkey/.local/share/nvim/lazy/mini.pairs
-	directory = /home/donkey/.local/share/nvim/lazy/mini.surround
-	directory = /home/donkey/.local/share/nvim/lazy/noe-tree-nvim
-	directory = /home/donkey/.local/share/nvim/lazy/neoconf.nvim
-	directory = /home/donkey/.local/share/nvim/lazy/neo-tree.nvim
-	directory = /home/donkey/.local/share/nvim/lazy/neodev.nvim
-	directory = /home/donkey/.local/share/nvim/lazy/noice.nvim
-	directory = /home/donkey/.local/share/nvim/lazy/nui.nvim
-	directory = /home/donkey/.local/share/nvim/lazy/nvim-cmp
-	directory = /home/donkey/.local/share/nvim/lazy/nvim-lint
-	directory = /home/donkey/.local/share/nvim/lazy/nvim-lspconfig
-	directory = /home/donkey/.local/share/nvim/lazy/nvim-notify
-	directory = /home/donkey/.local/share/nvim/lazy/nvim-spectre
-	directory = /home/donkey/.local/share/nvim/lazy/nvim-treesitter
-	directory = /home/donkey/.local/share/nvim/lazy/nvim-treesitter-context
-	directory = /home/donkey/.local/share/nvim/lazy/nvim-treesitter-textobjects
-	directory = /home/donkey/.local/share/nvim/lazy/nvim-ts-autotag
-	directory = /home/donkey/.local/share/nvim/lazy/nvim-ts-context-commentstring
-	directory = /home/donkey/.local/share/nvim/lazy/nvim-web-devicons
-	directory = /home/donkey/.local/share/nvim/lazy/persistence.nvim
-	directory = /home/donkey/.local/share/nvim/lazy/plenary.nvim
-	directory = /home/donkey/.local/share/nvim/lazy/telescope-fzf-native.nvim
-	directory = /home/donkey/.local/share/nvim/lazy/telescope.nvim
-	directory = /home/donkey/.local/share/nvim/lazy/todo-comments.nvim
-	directory = /home/donkey/.local/share/nvim/lazy/tokyonight.nvim
-	directory = /home/donkey/.local/share/nvim/lazy/trouble.nvim
-	directory = /home/donkey/.local/share/nvim/lazy/vim-illuminate
-	directory = /home/donkey/.local/share/nvim/lazy/vim-startuptime
-	directory = /home/donkey/.local/share/nvim/lazy/which-key.nvim
-	# Extra Vims
-	directory = /home/donkey/.local/share/nvim/lazy/clangd_extensions.nvim
-	directory = /home/donkey/.local/share/nvim/lazy/cmake-tools.nvim
-	directory = /home/donkey/.local/share/nvim/lazy/codeium.nvim
-	directory = /home/donkey/.local/share/nvim/lazy/copilot-cmp
-	directory = /home/donkey/.local/share/nvim/lazy/copilot.lua
-	directory = /home/donkey/.local/share/nvim/lazy/crates.nvim
-	directory = /home/donkey/.local/share/nvim/lazy/headlines.nvim
-	directory = /home/donkey/.local/share/nvim/lazy/markdown-preview.nvim
-	directory = /home/donkey/.local/share/nvim/lazy/nvim-jdtls
-	directory = /home/donkey/.local/share/nvim/lazy/rustaceanvim
-	directory = /home/donkey/.local/share/nvim/lazy/SchemaStore.nvim
-	directory = /home/donkey/.local/share/nvim/lazy/semshi
-	directory = /home/donkey/.local/share/nvim/lazy/venv-selector.nvim
-	directory = /home/donkey/.local/share/nvim/lazy/vimtex
-	directory = /home/donkey/.local/share/nvim/lazy/vim-dadbod
-	directory = /home/donkey/.local/share/nvim/lazy/vim-dadbod-completion
-	directory = /home/donkey/.local/share/nvim/lazy/vim-dadbod-ui
-	directory = /home/donkey/.local/share/nvim/lazy/mini.icons
-	directory = /home/donkey/.local/share/nvim/lazy/grug-far.nvim
-	directory = /home/donkey/.local/share/nvim/lazy/markdown.nvim
-	directory = /home/donkey/.local/share/nvim/lazy/dial.nvim
-	directory = /home/donkey/.local/share/nvim/lazy/cmp-git
-	directory = /home/donkey/.local/share/nvim/lazy/nvim-vtsls
-	directory = /home/donkey/.local/share/nvim/lazy/lazydev.nvim
-	directory = /home/donkey/.local/share/nvim/lazy/luvit-meta
-	directory = /home/donkey/.local/share/nvim/lazy/mini.hipatterns
-	directory = /home/donkey/.local/share/nvim/lazy/yanky.nvim
-	directory = /home/donkey/.local/share/nvim/lazy/nvim-snippets
-	directory = /home/donkey/.local/share/nvim/lazy/ts-comments.nvim
 	# Settings
 	directory = /home/donkey/.config/nvim
 	directory = /home/donkey/powerlevel10k
 	directory = /home/donkey/.fzf
 	# Templates
-	directory = /home/donkey/Templates/tex/modular_project
-	directory = /home/donkey/Templates/tex/project
-	directory = /home/donkey/Templates/tex/act
-	directory = /home/donkey/Drives/github/new-blog
-	directory = /home/donkey/Drives/github/old-blog
-	directory = /home/donkey/Drives/github/escuela/6to
-	directory = /home/donkey/Drives/github/school
-	directory = /home/donkey/.cache/paru/clone/spotube
-	directory = /home/donkey/.cache/paru/clone/spotube/src/flutter
-
+	directory = /home/donkey/Templates/tex/act_template
+	directory = /home/donkey/Templates/tex/modular-project_template
+	directory = /home/donkey/Templates/tex/team_template
+	# Paru Cache
+	directory = /home/donkey/cache/paru/clone/brave-bin
+	directory = /home/donkey/cache/paru/clone/pgadmin4-desktop
+	directory = /home/donkey/cache/paru/clone/pgadmin4-py
+	directory = /home/donkey/cache/paru/clone/pgadmin4-server
+	directory = /home/donkey/cache/paru/clone/powershell-bin
+	directory = /home/donkey/cache/paru/clone/vscodium-bin
+	# Yay Cache
+	directory = /home/donkey/cache/yay/brave-bin
+	directory = /home/donkey/cache/yay/vscodium-bin
+	directory = /home/donkey/fzf
+	# Nvim
+	directory = /home/donkey/local/share/nvim/lazy/better-comments.nvim
+	directory = /home/donkey/local/share/nvim/lazy/bufferline.nvim
+	directory = /home/donkey/local/share/nvim/lazy/catppuccin
+	directory = /home/donkey/local/share/nvim/lazy/cmp-buffer
+	directory = /home/donkey/local/share/nvim/lazy/cmp-git
+	directory = /home/donkey/local/share/nvim/lazy/cmp-nvim-lsp
+	directory = /home/donkey/local/share/nvim/lazy/cmp-path
+	directory = /home/donkey/local/share/nvim/lazy/conform.nvim
+	directory = /home/donkey/local/share/nvim/lazy/crates.nvim
+	directory = /home/donkey/local/share/nvim/lazy/dashboard-nvim
+	directory = /home/donkey/local/share/nvim/lazy/dial.nvim
+	directory = /home/donkey/local/share/nvim/lazy/dressing.nvim
+	directory = /home/donkey/local/share/nvim/lazy/flash.nvim
+	directory = /home/donkey/local/share/nvim/lazy/friendly-snippets
+	directory = /home/donkey/local/share/nvim/lazy/gitsigns.nvim
+	directory = /home/donkey/local/share/nvim/lazy/grug-far.nvim
+	directory = /home/donkey/local/share/nvim/lazy/indent-blankline.nvim
+	directory = /home/donkey/local/share/nvim/lazy/lazydev.nvim
+	directory = /home/donkey/local/share/nvim/lazy/LazyVim
+	directory = /home/donkey/local/share/nvim/lazy/lualine.nvim
+	directory = /home/donkey/local/share/nvim/lazy/luvit-meta
+	directory = /home/donkey/local/share/nvim/lazy/markdown-preview.nvim
+	directory = /home/donkey/local/share/nvim/lazy/mason-lspconfig.nvim
+	directory = /home/donkey/local/share/nvim/lazy/mason.nvim
+	directory = /home/donkey/local/share/nvim/lazy/mini.ai
+	directory = /home/donkey/local/share/nvim/lazy/mini.hipatterns
+	directory = /home/donkey/local/share/nvim/lazy/mini.icons
+	directory = /home/donkey/local/share/nvim/lazy/mini.pairs
+	directory = /home/donkey/local/share/nvim/lazy/neo-tree.nvim
+	directory = /home/donkey/local/share/nvim/lazy/noice.nvim
+	directory = /home/donkey/local/share/nvim/lazy/nui.nvim
+	directory = /home/donkey/local/share/nvim/lazy/nvim-cmp
+	directory = /home/donkey/local/share/nvim/lazy/nvim-jdtls
+	directory = /home/donkey/local/share/nvim/lazy/nvim-lspconfig
+	directory = /home/donkey/local/share/nvim/lazy/nvim-snippets
+	directory = /home/donkey/local/share/nvim/lazy/nvim-treesitter
+	directory = /home/donkey/local/share/nvim/lazy/nvim-treesitter-textobjects
+	directory = /home/donkey/local/share/nvim/lazy/nvim-ts-autotag
+	directory = /home/donkey/local/share/nvim/lazy/persistence.nvim
+	directory = /home/donkey/local/share/nvim/lazy/plenary.nvim
+	directory = /home/donkey/local/share/nvim/lazy/render-markdown.nvim
+	directory = /home/donkey/local/share/nvim/lazy/rustaceanvim
+	directory = /home/donkey/local/share/nvim/lazy/SchemaStore.nvim
+	directory = /home/donkey/local/share/nvim/lazy/snacks.nvim
+	directory = /home/donkey/local/share/nvim/lazy/telescope.nvim
+	directory = /home/donkey/local/share/nvim/lazy/todo-comments.nvim
+	directory = /home/donkey/local/share/nvim/lazy/tokyonight.nvim
+	directory = /home/donkey/local/share/nvim/lazy/trouble.nvim
+	directory = /home/donkey/local/share/nvim/lazy/ts-comments.nvim
+	directory = /home/donkey/local/share/nvim/lazy/venv-selector.nvim
+	directory = /home/donkey/local/share/nvim/lazy/vim-dadbod
+	directory = /home/donkey/local/share/nvim/lazy/vim-dadbod-completion
+	directory = /home/donkey/local/share/nvim/lazy/vim-dadbod-ui
+	directory = /home/donkey/local/share/nvim/lazy/vimtex
+	directory = /home/donkey/local/share/nvim/lazy/which-key.nvim
+	directory = /home/donkey/local/share/nvim/lazy/yanky.nvim
+	directory = /home/donkey/local/share/nvim/lazy/lazy.nvim
+	directory = /home/donkey/local/share/nvim/lazy/nvim-lint
+	directory = /home/donkey/local/share/nvim/lazy/telescope-fzf-native.nvim
+	directory = /home/donkey/local/share/Trash/files/proyecto
 [alias]
 	# https://platzi.com/comentario/594183/
 	superlog = log --graph --abbrev-commit --decorate --date=relative --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%C(bold yellow)%d%C(reset)' --all
