--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,8 +1,3 @@
-import = [
-	"~/.config/alacritty/base16-dark.toml",
-	"~/.config/alacritty/keybindings.toml",
-]
-
 [font]
 size = 12
 offset = { x = 0, y = 2 }
@@ -13,9 +8,15 @@ style = 'Regular'
 
 [font.bold]
 family = 'HackNerdFont'
+style = 'Bold'
+
+[font.bold_italic]
+family = 'HackNerdFont'
+style = 'Bold Italic'
 
 [font.italic]
 family = 'HackNerdFont'
+style = 'Italic'
 
 
 # Archivo: alacritty_colors.toml
@@ -49,6 +50,19 @@ white = '0xffffff'
 [window]
 padding = { x = 20, y = 25 }
 
-[shell]
+[general]
+import = [
+  "~/.config/alacritty/base16-dark.toml",
+  "~/.config/alacritty/keybindings.toml",
+]
+
+[terminal]
+
+[terminal.shell]
 program = "/bin/zsh"
 args = ["-l"]
+
+[keyboard]
+bindings = [
+  { key = "Return", mods = "Control|Shift", action = "SpawnNewInstance" },
+]
